# Race__simulator

./: CMakeLists.txt  DLL_Race.sln
DLL_Race/: 4wd_boots.cpp  4wd_boots.h  API.h  Air.cpp  Air.h  Broom.cpp  Broom.h  Camel.cpp  Camel.h  DLL_Race.vcxproj  DLL_Race.vcxproj.filters  Eagle.cpp  Eagle.h  Fast_camel.cpp  Fast_camel.h  Ground.cpp  Ground.h  Kentavr.cpp  Kentavr.h  Magic_carpet.cpp  Magic_carpet.h  Transport.cpp  Transport.h  transport_factory.cpp  transport_factory.h
Race_client/: Race_client.cpp  Race_client.vcxproj  Race_client.vcxproj.filters
